# spawnbox

./: .gitignore  pyproject.toml
res/: PKGBUILD
src/spawnbox/: __init__.py  __main__.py  cli.py  config.py  constants.py  nspawn.py  nspawn_config.py  resolver.py  runner.py  systemd.py
src/spawnbox/resources/: spawnbox-gpg-agent.service
