[project]
name = "spawnbox"
version = "0.1.0"
description = "systemd-nspawn wrapper optimized for LLM coding agents"
requires-python = ">=3.11"
authors = [{name = "seiuneko"}]
license = "AGPL-3.0-or-later"

[project.scripts]
spawnbox = "spawnbox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spawnbox"]